--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 html {
     margin: 0;
+    background-color:rgb(37, 37, 37) ;
 }
 
+body{
+    position: relative;
+    top: 0;
+    height: 100%;
+}
 .App {
-    margin:0;
     background-color:rgb(37, 37, 37) ;
     color: white;
+    top: 0;
+    height: 100%;
     /* font-family: 'Varela Round', sans-serif; */
 }
