--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,6 +8,7 @@ header {
     background-color:rgb(0, 0, 0) ;
     position: fixed;
     top: 0;
+    z-index: 2;
 }
 
 header .logo{
@@ -36,12 +37,19 @@ header li {
     font-size: 15px;
 }
 
-/* .fa-solid .fa-house::before {
+i .fa-solid .fa-house::before {
     color: white;
-    background: -webkit-linear-gradient(27deg, rgba(0,88,106,1) 0%, rgba(146,213,147,1) 100%);
+    /* background: -webkit-linear-gradient(27deg, rgba(0,88,106,1) 0%, rgba(146,213,147,1) 100%);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-} */
+    -webkit-text-fill-color: transparent; */
+}
+
+i .fa-solid .fa-house {
+    color: white;
+    /* background: -webkit-linear-gradient(27deg, rgba(0,88,106,1) 0%, rgba(146,213,147,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+}
 
 .hidden {
     display: none;
