--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,5 +1,8 @@
 .Search{
     margin: 3.8rem 0 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .Search form{
@@ -14,18 +17,21 @@
     border: 1px solid white;
     border-radius: 5px;
     padding: .4rem;
+
 }
 
 .Search .movieListing {
     margin-left: 10px;
     flex-wrap: wrap;
+    width: 50%;
+    text-align: center;
 }
 
 .Search .poster {
     margin-left: 8px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.731);
     border-radius: 5px;
-    width: 200px;
+    width: 300px;
     transition: .2s;
 }
 
