--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -1,6 +1,6 @@
 .Filter {
-    height: 45vh;
-    background-color:black;
+    height: 35vh;
+    background-color:rgba(0, 0, 0, 0.735);
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.735);
     width: 75vw; 
     /* media query width 30vw */
