--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -53,3 +53,13 @@
 .HomePage .category::-webkit-scrollbar {
     display: none;
 }
+
+.HomePage .movieListing button {
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid white;
+    border-radius: 15px;
+    color: white;
+    font-size: 10px;
+    padding: 10px;
+    margin: 2px;
+}
