--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -32,7 +32,9 @@
 .displayFilter {
     display:flex;
     flex-direction: row;
-    margin: 3.8rem 0 0 1rem;
+    margin: 3rem 0 0 0;
+    overflow-x: scroll;
+    background-color: rgba(0, 0, 0, 0.735);
 }
 
 .displayFilter .movieListing {
@@ -78,11 +80,6 @@
     margin-left: 5px;
 }
 
-.displayFilter .category {
-    display: flex;
-    overflow-x: scroll;
-}
-
-.displayFilter .category::-webkit-scrollbar {
+.displayFilter::-webkit-scrollbar {
     display: none;
 }
