--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -6,7 +6,7 @@
     /* media query width 30vw */
     position: absolute;
     right: 2.5rem;
-    top: -8px;
+    top: -11px;
     z-index: 1;
 }
 
@@ -34,7 +34,6 @@
     flex-direction: row;
     margin: 3rem 0 0 0;
     overflow-x: scroll;
-    background-color: rgba(0, 0, 0, 0.735);
 }
 
 .displayFilter .movieListing {
@@ -82,4 +81,12 @@
 
 .displayFilter::-webkit-scrollbar {
     display: none;
+}
+
+i:visited {
+    color: white;
+}
+
+i::before {
+    color: white;
 }
