--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
 html {
-    margin: 0;
-    background-color:rgb(37, 37, 37) ;
+	margin: 0;
+	background-color: rgb(37, 37, 37);
 }
 
-body{
-    position: relative;
-    top: 0;
-    height: 100%;
+body {
+	position: relative;
+	top: 0;
+	height: 200vh;
 }
 .App {
-    background-color:rgb(37, 37, 37) ;
-    color: white;
-    top: 0;
-    height: 100%;
-    /* font-family: 'Varela Round', sans-serif; */
+	background-color: rgb(37, 37, 37);
+	color: white;
+	top: 0;
+	margin-top: 84px;
 }
