--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,60 +1,55 @@
 header {
-    display: flex;
-    width: 100vw;
-    margin: 0;
-    justify-content: space-between;
-    align-items: baseline;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.447);
-    background-color:rgb(0, 0, 0) ;
-    position: fixed;
-    top: 0;
-    z-index: 2;
+	display: flex;
+	margin: 0;
+	justify-content: space-between;
+	align-items: center;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.447);
+	background-color: rgb(0, 0, 0);
+	position: fixed;
+	top: 0;
+	z-index: 2;
+	padding: 24px;
+	width: 100%;
+	box-sizing: border-box;
 }
 
-header .logo{
-    margin-left: 1rem;
-    font-family: 'Varela Round', sans-serif;
-    font-weight: 700;
-    font-size: 13px;
-    background: -webkit-linear-gradient(27deg, rgba(0,88,106,1) 0%, rgba(146,213,147,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+header .logo {
+	font-family: "Varela Round", sans-serif;
+	font-weight: 700;
+	font-size: 13px;
+	background: -webkit-linear-gradient(27deg, rgba(0, 88, 106, 1) 0%, rgba(146, 213, 147, 1) 100%);
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 header ul {
-    display: flex;
-    margin-right: 1.5rem;
-    padding: 0;
+	display: flex;
+	padding: 0;
+	margin: 0;
 }
 
 header li {
-    margin-left: 1rem;
-    list-style-type: none;
-    font-size: 16px;
+	margin-left: 1rem;
+	list-style-type: none;
+	font-size: 16px;
 }
 
 .fa-solid .fa-trash-can::before {
-    font-size: 15px;
+	font-size: 15px;
 }
 
 i .fa-solid .fa-house::before {
-    color: white;
-    /* background: -webkit-linear-gradient(27deg, rgba(0,88,106,1) 0%, rgba(146,213,147,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
+	color: white;
 }
 
 i .fa-solid .fa-house {
-    color: white;
-    /* background: -webkit-linear-gradient(27deg, rgba(0,88,106,1) 0%, rgba(146,213,147,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
+	color: white;
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
 .fa-heart:visited {
-    color: white;
+	color: white;
 }
