--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,71 +1,72 @@
 .HomePage {
-    margin: 3.8rem 0 0 1rem;
+	padding: 24px;
 }
 
 .HomePage .movieListing {
-    margin-left: 10px;
-    flex-wrap: wrap;
-    text-align: center;
+	flex-wrap: wrap;
+	text-align: center;
+	margin: 0;
 }
 
 .HomePage h1 {
-    font-family: 'Varela Round', sans-serif;
-    margin-top: 10px;
+	font-family: "Varela Round", sans-serif;
+	margin-top: 10px;
 }
 
 .HomePage h3 {
-    margin: 15px 0px 0px 0px;
+	margin: 15px 0px 0px 0px;
 }
 
 .HomePage .poster {
-    margin-left: 8px;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.735);
-    border-radius: 5px;
-    width: 250px;
-    transition: .2s;
+	margin-left: 8px;
+	box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.735);
+	border-radius: 5px;
+	width: 250px;
+	transition: 0.2s;
 }
 
 .HomePage .poster:hover {
-    transform: scale(1.05);
+	transform: scale(1.05);
 }
 
 .HomePage .movieGenre {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin: 0px 20px 0px 15px
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
 }
 
 .HomePage ul {
-    padding: 0;
+	padding: 0;
 }
 
 .HomePage li {
-    list-style-type: none;
-    margin-left: 5px;
+	list-style-type: none;
+	margin-left: 5px;
 }
 
 .HomePage .category {
-    display: flex;
-    overflow-x: scroll;
+	display: flex;
+	overflow-x: scroll;
+	padding: 16px 0;
+	gap: 8px;
 }
 
 .HomePage .category::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 .HomePage .movieListing button {
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid white;
-    border-radius: 15px;
-    color: white;
-    font-size: 10px;
-    font-weight: 650;
-    padding: 10px;
-    margin: 2px;
+	background-color: rgba(0, 0, 0, 0);
+	border: 1px solid white;
+	border-radius: 15px;
+	color: white;
+	font-size: 10px;
+	font-weight: 650;
+	padding: 10px;
+	margin: 2px;
 }
 
 .HomePage .movieListing button:hover {
-    background-color: white;
-    color: black;
+	background-color: white;
+	color: black;
 }
