--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,51 +1,50 @@
-.Search{
-    margin: 3.8rem 0 1rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.Search {
+	margin: 3.8rem 0 1rem 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.Search form{
-    display: flex;
-    position: absolute;
-    right: 1rem;
-    top: -11px;
-    background-color: black;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.731);
-    padding: 20px;
+.Search form {
+	display: flex;
+	position: fixed;
+	right: 1rem;
+	top: 75px;
+	background-color: black;
+	box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.731);
+	padding: 20px;
 }
 
 #search {
-    background-color: rgba(255, 255, 255, 0);
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: .4rem;
-    color: white;
-
+	background-color: rgba(255, 255, 255, 0);
+	border: 1px solid white;
+	border-radius: 5px;
+	padding: 0.4rem;
+	color: white;
 }
 
 .Search .movieListing {
-    margin-left: 10px;
-    flex-wrap: wrap;
-    width: 50%;
-    text-align: center;
+	margin-left: 10px;
+	flex-wrap: wrap;
+	width: 50%;
+	text-align: center;
 }
 
 .Search .poster {
-    margin-left: 8px;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.731);
-    border-radius: 5px;
-    width: 300px;
-    transition: .2s;
+	margin-left: 8px;
+	box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.731);
+	border-radius: 5px;
+	width: 300px;
+	transition: 0.2s;
 }
 
- .Search .poster:hover {
-    transform: scale(1.05);
+.Search .poster:hover {
+	transform: scale(1.05);
 }
 
 .Search button {
-    background: black;
-    border: 1px solid white;
-    border-radius: 5px;
-    color: white;
+	background: black;
+	border: 1px solid white;
+	border-radius: 5px;
+	color: white;
 }
